[gd_scene load_steps=10 format=2]

[ext_resource path="res://img/Gui/start.png" type="Texture" id=1]
[ext_resource path="res://Fonts/BebasNeue-Thin.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes&Scripts/MainMenu/Menu.gd" type="Script" id=3]
[ext_resource path="res://img/Gui/start_pressed.png" type="Texture" id=4]
[ext_resource path="res://img/Gui/кнопка звука.png" type="Texture" id=5]
[ext_resource path="res://img/Gui/выключить звук.png" type="Texture" id=6]
[ext_resource path="res://img/Gui/выключить звук_pressed.png" type="Texture" id=7]
[ext_resource path="res://img/Gui/кнопка звука_pressed.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 250
font_data = ExtResource( 2 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
margin_right = 1924.0
margin_bottom = 1084.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Collector" type="Node2D" parent="."]

[node name="Node2D" type="Node2D" parent="."]
z_index = 5

[node name="GameName" type="Label" parent="Node2D"]
margin_left = 772.0
margin_top = 435.0
margin_right = 1146.0
margin_bottom = 686.0
custom_fonts/font = SubResource( 1 )
text = "IKIGAI"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="MusicOn" type="TextureButton" parent="."]
margin_left = 55.4292
margin_top = 891.519
margin_right = 648.429
margin_bottom = 1505.52
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicOff" type="TextureButton" parent="."]
margin_left = 50.9747
margin_top = 891.519
margin_right = 643.975
margin_bottom = 1505.52
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 834.7
margin_top = 700.0
margin_right = 2087.7
margin_bottom = 1053.0
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="MusicOn" to="." method="_on_MusicOn_pressed"]
[connection signal="pressed" from="MusicOff" to="." method="_on_MusicOff_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
